styling: prevent content jumping down with confirm message

--- a/public/css/pages/dashboard.css
+++ b/public/css/pages/dashboard.css
@@ -36,6 +36,8 @@ summary {
 }
 
 .alert {
+  position: absolute;
+  width: 100%;
   display: flex;
   justify-content: center;
   color: white;
